--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="assets/css/pace-theme-minimal.css">
   <script src="assets/scripts/pace.js"></script>
   <meta charset="utf-8">
+  <meta name="description" content="Create blog with blog.dedd.ca">
   <title>Blog - dedd.ca</title>
   <base href="/">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
